# dogfish

./: .clang-format  .clang-tidy  .envrc  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.zig  build.zig.zon  default.nix  docs.md  flake.nix  preprocessed  run.bat  run.sh
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
assets/materials/: airplane.mtl  basic_lit.frag  basic_lit.vert  bullet.vert  bullet.vs  instanced.fs
assets/models/: airplane.gltf
assets/postprocessing/: edges.fs  g_buffer.vert  gather.fs  lighting_deferred.vert  normals.fs  normals.vert
src/: airplane.c  airplane.h  bullet.c  bullet.h  bullet_internal.h  bullet_render.h  camera.c  camera.h  camera_manager.c  camera_manager.h  debug.c  debug.h  dynarray.h  dynarray_implementation.c  fps_camera.c  fps_camera.h  gameobject.c  gameobject.h  gamestate.c  gamestate.h  input.c  input.h  main.c  mesher.c  mesher.h  meson.build  object_structure.c  object_structure.h  physics.c  physics.h  player.c  quicksort.c  quicksort.h  render_pipeline.c  render_pipeline.h  skybox.c  skybox.h  terrain.c  terrain.h  terrain_internal.c  (+7 more)
src/include/: architecture.h  constants.h  debug.h  dynarray.h  rlights.h  shorthand.h
src/include/constants/: camera.h  controls.h  general.h  physics.h  screen.h
